force-app/main/default/objects/msf_BetterNow__mdt/msf_BetterNow__mdt.object-meta.xml
<CustomObject>
    <description>La relación entre proyectos, temáticas y afectaciones de BetterNow.</description>
    <label>Maestro BetterNow</label>
    <pluralLabel>Maestro BetterNow</pluralLabel>
</CustomObject>