force-app/main/default/objects/msf_BetterNow__mdt/fields/msf_Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>msf_Attribute_2__c</fullName>
    <description>Attribute 2 value for the BetterNow Campaign</description>
    <label>Atributo 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>