force-app/main/default/objects/msf_BetterNow__mdt/fields/msf_BetterNowProjectId__c.field-meta.xml
<CustomField>
    <fullName>msf_BetterNowProjectId__c</fullName>
    <label>Id proyecto BetterNow</label>
    <length>40</length>
    <type>Text</type>
</CustomField>