force-app/main/default/objects/msf_BetterNow__mdt/fields/msf_GAUExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_GAUExternalId__c</fullName>
    <label>Afectación</label>
    <length>40</length>
    <type>Text</type>
</CustomField>