force-app/main/default/objects/msf_BetterNow__mdt/fields/msf_Thematic__c.field-meta.xml
<CustomField>
    <fullName>msf_Thematic__c</fullName>
    <label>Temática</label>
    <length>40</length>
    <type>Text</type>
</CustomField>