force-app/main/default/objects/msf_BetterNow__mdt/listViews/Maestros_BetterNow.listView-meta.xml
<ListView>
    <fullName>Maestros_BetterNow</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>msf_BetterNowProjectId__c</columns>
    <columns>msf_Thematic__c</columns>
    <columns>msf_GAUExternalId__c</columns>
    <columns>IsProtected</columns>
    <columns>msf_Attribute_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Maestros BetterNow</label>
    <language>es</language>
</ListView>